# memoryBank

./: .gitignore  Cargo.toml  README.md
memorybank-daemon/: Cargo.toml  readme.md
memorybank-daemon/src/: commands.rs  config.rs  ipc.rs  keywatch.rs  main.rs
memorybank-gui/: Cargo.toml
memorybank-gui/src/: config.rs  main.rs  modifiers.rs  validation.rs
