[package]
name = "memorybank-daemon"
version = "0.1.0"
edition = "2021"
description = "The background clipboard manager daemon for CtrlM. Runs silently, monitors system clipboard and manages multi-slot memory."
authors = ["José Abella <jose@neurons.me>"]
license = "MIT"
repository = "https://github.com/neurons-me/ctrlm"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "1.0"
anyhow = "1.0"