[package]
name = "memorybank-gui"
version = "0.1.0"
edition = "2021"
description = "Graphical interface for configuring hotkeys and managing slots in CtrlM."
authors = ["José Abella <jose@neurons.me>"]
license = "MIT"
repository = "https://github.com/neurons-me/ctrlm"

[dependencies]
eframe = "0.24"           # GUI app framework built on egui
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6"              # for saving GUI configuration easily
